# handlers/checkversion/controller.go
@@ -2,24 +2,21 @@ package checkversion
 
 import (
 	"net/http"
-	"os"
 
 	"github.com/gin-gonic/gin"
+	"github.com/milkaxq/bpcpayment/constants"
 )
 
 // @Summary Check EPG Versions
 // @Description This API endpoint checks the versions of E-commerce Payment Gateway data for two URLs constructed from a provided base URL in *ENV*.
 // @Tags epg
 // @Produce json
-// @Success 200 {object} EPGVersionsResponse  "success response containing versions for both URLs"
-// @Failure 400 {object} constants.HttpError "on invalid request body"
-// @Failure 500 {object} EPGVersionsResponse "on check version function error"
+// @Success 200 {object} EPGVersionsResponse "Success response containing versions for both URLs"
+// @Failure 500 {object} EPGVersionsResponse "Check version function error"
 // @Router /check-version [get]
 func CheckVersion(c *gin.Context) {
-	var request CheckVersionRequest
+	versions := checkEPGVersions(constants.Base.BaseURL)
 
-	request.BaseURL = os.Getenv("BASE_URL")
-	versions := checkEPGVersions(request.BaseURL)
 	if versions.Error1 != "" && versions.Error2 != "" {
 		c.JSON(http.StatusInternalServerError, versions)
 		return
