# handlers/orderregistration/model.go
@@ -5,24 +5,24 @@ import "github.com/milkaxq/bpcpayment/constants"
 type OrderRegistrationRequest struct {
 	// User credentials
 	// Login of the API user on whose behalf requests are processed for a particular merchant.
-	Username string `json:"userName"`
+	Username string `json:"userName" minLength:"1" maxLength:"30"`
 	// User’s password.
-	Password string `json:"password"`
+	Password string `json:"password" minLength:"1" maxLength:"30"`
 
 	// Order details
 	/*
 		Number (identifier) of the order in the merchant’s online store system.
 		It is unique for every store in the system and is generated on the order registration.
 	*/
-	OrderNumber string `json:"orderNumber"`
+	OrderNumber string `json:"orderNumber" minLength:"1" maxLength:"32"`
 	//Order amount in the minor denomination (for example, cents).
-	Amount int64 `json:"amount"`
+	Amount int64 `json:"amount" minLength:"1" maxLength:"19"`
 	// Payment currency code in the ISO 4217 format
-	Currency string `json:"currency"`
+	Currency string `json:"currency" minLength:"3" maxLength:"3"`
 	// URL to which the customer is redirected after a successful payment.
-	ReturnUrl string `json:"returnUrl"`
+	ReturnUrl string `json:"returnUrl" minLength:"1" maxLength:"512"`
 	// Free form description of the order.
-	Description string `json:"description,omitempty"`
+	Description string `json:"description,omitempty" maxLength:"512"`
 
 	// Optional fields
 	/*
@@ -32,25 +32,25 @@ type OrderRegistrationRequest struct {
 
 		Error messages are returned in this language.
 	*/
-	Language string `json:"language,omitempty"`
+	Language string `json:"language,omitempty" minLength:"2" maxLength:"2"`
 	/*
 		Customer identifier in the merchant system. It is used in the bindings functionality.
 		This parameter may be present, if the merchant has the permissions to create and manage bindings
 		(the Merchant is allowed to use bindings merchant option and other,
 			see “Main information tab” in the Merchants section of EPG user guide.)
 	*/
-	ClientId string `json:"clientId,omitempty"`
+	ClientId string `json:"clientId,omitempty" minLength:"1" maxLength:"512"`
 	// If notifying customers is enabled, the customer’s email address to send notifications to.
 	Email string `json:"email,omitempty"`
 	// If notifying customers is enabled, the customer’s phone number to send SMS notifications to.
-	Phone string `json:"phone,omitempty"`
+	Phone string `json:"phone,omitempty" maxLength:"255"`
 
 	// Additional information
 	/*
 		Fields used to store additional information. The type is as follows:
 		{"param":"value","param2":"value2"}
 	*/
-	JsonParams []map[string]string `json:"jsonParams,omitempty"`
+	JsonParams []map[string]string `json:"jsonParams,omitempty" maxLength:"1024"`
 
 	// Order lifetime
 	/*
@@ -65,7 +65,7 @@ type OrderRegistrationRequest struct {
 		system setting is used (the default value is 1200 seconds) .
 		If the request contains the expirationDate parameter, the sessionTimeoutSecs parameter is ignored.
 	*/
-	SessionTimeoutSecs int `json:"sessionTimeoutSecs,omitempty"`
+	SessionTimeoutSecs int `json:"sessionTimeoutSecs,omitempty" maxLength:"9"`
 	/*
 		Date and time when the order is terminated. The following format is used: yyyy-MM-ddTHH:mm:ss
 		If this parameter is not specified, the sessionTimeoutSecs parameter is used to determine the
@@ -81,7 +81,7 @@ type OrderRegistrationRequest struct {
 		1. This order can be paid only by binding.
 		2. The payer is redirected to a payment page where the CVC must be entered.
 	*/
-	BindingId string `json:"bindingId,omitempty"`
+	BindingId string `json:"bindingId,omitempty" maxLength:"255"`
 	/*
 		Parameter that enables switching on 3-D Secure check for a merchant.
 		The available values are:
@@ -113,7 +113,7 @@ type OrderRegistrationRequest struct {
 		· GOOGLE_PAY — Payment made using the Google Pay service
 		· SAMSUNG_PAY — Payment made using the Samsung Pay service
 	*/
-	PaymentWay string `json:"paymentWay,omitempty"`
+	PaymentWay string `json:"paymentWay,omitempty" maxLength:"32"`
 
 	// Recurring payments (mandatory for recurring payments)
 	/*
@@ -134,13 +134,13 @@ type OrderRegistrationRequest struct {
 		Date when the recurring payment starts. The date format is YYYYMMDD.
 		YYYYMMDD 00:00:00 time is used for the start date
 	*/
-	RecurrenceStartDate string `json:"recurrenceStartDate,omitempty"`
+	RecurrenceStartDate string `json:"recurrenceStartDate,omitempty" minLength:"8" maxLength:"8"`
 	/*
 		Date when the recurring payment ends. The date format is YYYYMMDD.
 		The default value (if empty) is infinite.
 		YYYYMMDD 23:59:59 time is used for the end date.
 	*/
-	RecurrenceEndDate string `json:"recurrenceEndDate,omitempty"`
+	RecurrenceEndDate string `json:"recurrenceEndDate,omitempty" minLength:"8" maxLength:"8"`
 
 	// 3D Secure 2 parameters (conditional)
 	/*
