# routers/routes.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	docs "github.com/milkaxq/bpcpayment/docs"
 	"github.com/milkaxq/bpcpayment/handlers/checkversion"
+	"github.com/milkaxq/bpcpayment/handlers/orderregistration"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -18,6 +19,7 @@ func InitRoutes() {
 	v1 := r.Group("/api/v1")
 	{
 		v1.GET("/check-version", checkversion.CheckVersion)
+		v1.POST("/register-order", orderregistration.OrderRegistration)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.Run()
